--- a/W4_WorkingWithData.ipynb
+++ b/W4_WorkingWithData.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "''"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Albums</th>\n",
+       "      <th>Released</th>\n",
+       "      <th>Length</th>\n",
+       "      <th>Colors</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Thriler</td>\n",
+       "      <td>1982</td>\n",
+       "      <td>00:42:19</td>\n",
+       "      <td>Red</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Back in Black</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>00:42:11</td>\n",
+       "      <td>Blue</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The dark side of the moon</td>\n",
+       "      <td>1973</td>\n",
+       "      <td>00:42:49</td>\n",
+       "      <td>Green</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>The bodyguard</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>00:57:44</td>\n",
+       "      <td>Yellow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bat out of hell</td>\n",
+       "      <td>1997</td>\n",
+       "      <td>00:46:33</td>\n",
+       "      <td>Orange</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Albums  Released    Length  Colors\n",
+       "0                    Thriler      1982  00:42:19     Red\n",
+       "1              Back in Black      1980  00:42:11    Blue\n",
+       "2  The dark side of the moon      1973  00:42:49   Green\n",
+       "3              The bodyguard      1992  00:57:44  Yellow\n",
+       "4            Bat out of hell      1997  00:46:33  Orange"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Songs_Frame.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +400,7 @@
        "1982"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +421,7 @@
        "'Thriler'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +488,7 @@
        "3  00:57:44  Yellow"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +549,7 @@
        "2  The dark side of the moon      1973"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +631,7 @@
        "4  Bat out of hell      1997  00:46:33  Orange"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +748,7 @@
        "2           4  Bat out of hell      1997  00:46:33  Orange"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +841,7 @@
        "4            Bat out of hell      1997  00:46:33  Orange"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -784,14 +874,14 @@
    "source": [
     "# import numpy package\n",
     "import numpy as np\n",
-    "# cast a list of numers to an array\n",
+    "# cast a list of numbers to an array\n",
     "a=np.array([1,2,3,4,5])\n",
     "print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +910,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +1066,7 @@
        "3.141592653589793"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1027,16 +1117,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x10e26dbe0>]"
+       "[<matplotlib.lines.Line2D at 0x11b796c18>]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1071,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1135,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1151,7 +1241,7 @@
        "(3,)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1165,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1186,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1217,7 +1307,7 @@
        "       [50, 50, 50]])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
